add stoplight version at /open-api-docs

--- a/server/views/stoplight.html
+++ b/server/views/stoplight.html
@@ -11,6 +11,6 @@
     />
   </head>
   <body>
-    <elements-api apiDescriptionUrl="/open-api" router="hash" />
+    <elements-api apiDescriptionUrl="/api-docs/oas.json" router="hash" />
   </body>
 </html>
